--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://lukeclarksfo.github.io/header.css">
+    <link rel="stylesheet" href="https://lukeclarksf.github.io/header.css">
 </head>
 <body>
     <div id="cross-first-header">
-        <div><a href="https://lukeclarksfo.github.io/">Luke Clark</a></div>
+        <div><a href="https://lukeclarkso.github.io/">Luke Clark</a></div>
         <div><a href="https://github.com/lukeclarksfo/machinelearning/">GitHub</a></div>
     </div>
     <div id="cross-second-header">
