--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="cross-first-header">
-        <div><a href="https://lukeclarkso.github.io/">Luke Clark</a></div>
+        <div><a href="https://lukeclarksf.github.io/">Luke Clark</a></div>
         <div><a href="https://github.com/lukeclarksfo/machinelearning/">GitHub</a></div>
     </div>
     <div id="cross-second-header">
